--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -1,57 +1,139 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Booj Code Test</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- bootstrap css -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    </head>
-    <body>
-    <!--Begin header  -->
-        <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Navbar</a>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-            </nav>
-        <!--End Header  -->
-        <!--Begin Hero  -->
-            <div class="jumbotron">
-                <div class="row">
-                    <div class="image col-sm-10">
-                        <img src="./Assets/Realtor Image/saramortensun.jpg" />
-                        <h3>REALTOR</h3>
-                    </div>
-                </div>
-            </div>
-        <!--End Hero  -->
-    <script src="script.js"></script>
-    <!-- jQuery,  bootstrap js -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Booj Code Test</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-    </body>
+</head>
+<body>
+<!--Begin Title Nav-->
+<nav class="navbar navbar-toggleable-sm navbar-light">
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#headerNav" aria-controls="headerNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+    <a class="navbar-brand" href="#"><img src="Assets/SVGs/TEN-logo.svg" /></a>
+
+    <div class="collapse navbar-collapse" id="headerNav">
+        <ul class="nav navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">SEARCH</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">COMMUNITIES</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">SERVICES</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">ABOUT US</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+<!--End Title Nav-->
+<!--Begin Search Nav-->
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+    <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
+  </form>
+<ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="#">NEW LISTINGS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">OPEN HOUSES</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">MAP SEARCH</a>
+      </li>
+    </ul>
+</nav>
+<!--End Search Nav-->
+<!-- Start Hero Section -->
+<div class="card-deck">
+  <div class="card">
+
+      <img class="image-fluid" src="Assets/Realtor Image/saramortensun.jpg" />
+
+  </div>
+  <div class="card">
+    <div class="card-block">
+      <h4 class="card-title">Jane Smith</h4>
+      <h5>REALTOR</h5>
+    <button class="btn btn-primary">Contact Me</button>
+        <ul class="nav">
+          <li class="nav-item">
+            <img src="Assets/SVGs/twitter.svg" />   
+          </li>
+          <li class="nav-item">
+            <img src="Assets/SVGs/facebook.svg" />
+          </li>
+          <li class="nav-item">
+            <img src="Assets/SVGs/instagram.svg" />
+          </li>
+          <li class="nav-item">
+            <img src="Assets/SVGs/linkedin.svg" />
+          </li>
+          <li class="nav-item">
+            <img src="Assets/SVGs/youtube.svg" />
+          </li>
+        </ul>
+    </div>
+  </div>
+  <div class="card">
+    <div class="card-block">
+        <ul>
+            <li>530.830.2150</li>
+            <li>Visit My Website</li>
+            <li>Denver Office</li>
+            <li>eNewsletter Sign Up</li>
+        </ul>
+    </div>
+  </div>
+</div>
+<!-- End Hero Section -->
+<!-- Content w/ nav -->
+<div class="container">
+    <ul class="nav nav-tabs justify-content-center">
+      <li class="col-md-3"><a data-toggle="tab" href="#about-me">About Me</a></li>
+      <li class="col-md-3"><a data-toggle="tab" href="#my-listings">My Listings</a></li>
+      <li class="col-md-3"><a data-toggle="tab" href="#my-solds">My Solds</a></li>
+      <li class="col-md-3"><a data-toggle="tab" href="#testimonials">Testimonials</a></li>
+    </ul>
+
+    <div class="tab-content">
+      <div id="about-me" class="tab-pane fade in active">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique sint eos quaerat, alias dolor accusamus nostrum esse voluptas consectetur aut eum magnam nihil odit, sequi facere cum? Eum, error, reprehenderit!</p>
+      </div>
+      <div id="my-listings" class="tab-pane fade">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed!</p>
+      </div>
+      <div id="my-solds" class="tab-pane fade">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quos dolore suscipit quaerat provident blanditiis delectus odio, ea placeat, animi facilis aut labore veniam aspernatur, nesciunt esse numquam. Dignissimos, aperiam.</p>
+      </div>
+      <div id="testimonials" class="tab-pane fade">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quos dolore suscipit quaerat provident blanditiis delectus odio, ea placeat, animi facilis aut labore veniam aspernatur, nesciunt esse numquam. Dignissimos, aperiam.</p>
+      </div>
+    </div>
+</div>
+<!-- End Content w/ nav -->
+<!-- Start Footer -->
+<footer>
+
+</footer>
+<!-- End Footer -->
+<script src="script.js"></script>
+<!-- jQuery,  bootstrap js -->
+<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+</body>
 </html>
