gets all content on page

--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -60,9 +60,7 @@
 <!-- Start Hero Section -->
 <div class="card-deck">
   <div class="card">
-
-      <img class="image-fluid" src="Assets/Realtor Image/saramortensun.jpg" />
-
+      <img src="Assets/Realtor Image/saramortensun.jpg" />
   </div>
   <div class="card">
     <div class="card-block">
@@ -110,24 +108,86 @@
     </ul>
 
     <div class="tab-content">
-      <div id="about-me" class="tab-pane fade in active">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique sint eos quaerat, alias dolor accusamus nostrum esse voluptas consectetur aut eum magnam nihil odit, sequi facere cum? Eum, error, reprehenderit!</p>
+      <div id="about-me" class="tab-pane fade in active row">
+        <div class="col-lg-8 d-inline-block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo illo rerum, magnam quos est possimus, fugit dolorum obcaecati, numquam ea officia ipsum itaque recusandae beatae magni, incidunt minima explicabo? Saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis pariatur eos incidunt voluptas aliquid dolores eveniet nihil praesentium, est temporibus officia aperiam accusantium suscipit adipisci, harum at. Ipsam, accusamus.</p>
+        </div>
+        <div class="col-lg-3 d-inline-block">
+            <h3>LANGUAGE</h3>
+                <p>Dutch, French, Spanish</p>
+            <h3>DESIGNATIONS</h3>
+                <p>CRS, GRI, CNE</p>
+        </div>
       </div>
       <div id="my-listings" class="tab-pane fade">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed!</p>
+        <div class="col-lg-8 d-inline-block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo illo rerum, magnam quos est possimus, fugit dolorum obcaecati, numquam ea officia ipsum itaque recusandae beatae magni, incidunt minima explicabo? Saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis pariatur eos incidunt voluptas aliquid dolores eveniet nihil praesentium, est temporibus officia aperiam accusantium suscipit adipisci, harum at. Ipsam, accusamus.</p>
+        </div>
+        <div class="col-lg-3 d-inline-block">
+            <h3>LANGUAGE</h3>
+                <p>Dutch, French, Spanish</p>
+            <h3>DESIGNATIONS</h3>
+                <p>CRS, GRI, CNE</p>
+        </div>
       </div>
       <div id="my-solds" class="tab-pane fade">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quos dolore suscipit quaerat provident blanditiis delectus odio, ea placeat, animi facilis aut labore veniam aspernatur, nesciunt esse numquam. Dignissimos, aperiam.</p>
+        <div class="col-lg-8 d-inline-block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo illo rerum, magnam quos est possimus, fugit dolorum obcaecati, numquam ea officia ipsum itaque recusandae beatae magni, incidunt minima explicabo? Saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis pariatur eos incidunt voluptas aliquid dolores eveniet nihil praesentium, est temporibus officia aperiam accusantium suscipit adipisci, harum at. Ipsam, accusamus.</p>
+        </div>
+        <div class="col-lg-3 d-inline-block">
+            <h3>LANGUAGE</h3>
+                <p>Dutch, French, Spanish</p>
+            <h3>DESIGNATIONS</h3>
+                <p>CRS, GRI, CNE</p>
+        </div>
       </div>
       <div id="testimonials" class="tab-pane fade">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias quos dolore suscipit quaerat provident blanditiis delectus odio, ea placeat, animi facilis aut labore veniam aspernatur, nesciunt esse numquam. Dignissimos, aperiam.</p>
+        <div class="col-lg-8 d-inline-block">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo illo rerum, magnam quos est possimus, fugit dolorum obcaecati, numquam ea officia ipsum itaque recusandae beatae magni, incidunt minima explicabo? Saepe!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit omnis pariatur eos incidunt voluptas aliquid dolores eveniet nihil praesentium, est temporibus officia aperiam accusantium suscipit adipisci, harum at. Ipsam, accusamus.</p>
+        </div>
+        <div class="col-lg-3 d-inline-block">
+            <h3>LANGUAGE</h3>
+                <p>Dutch, French, Spanish</p>
+            <h3>DESIGNATIONS</h3>
+                <p>CRS, GRI, CNE</p>
+        </div>
       </div>
     </div>
 </div>
 <!-- End Content w/ nav -->
 <!-- Start Footer -->
-<footer>
-
+<footer class="row">
+    <div class="col-lg-4">
+        <p>1-800-234-4567</p>
+        <p>5678 Main Street, Denver, CO 80123</p>
+    </div>
+    <ul class="nav col-lg-4">
+          <li class="nav-item col-lg-1">
+            <img src="Assets/SVGs/twitter.svg" />   
+          </li>
+          <li class="nav-item col-lg-1">
+            <img src="Assets/SVGs/facebook.svg" />
+          </li>
+          <li class="nav-item col-lg-1">
+            <img src="Assets/SVGs/instagram.svg" />
+          </li>
+          <li class="nav-item col-lg-1">
+            <img src="Assets/SVGs/linkedin.svg" />
+          </li>
+          <li class="nav-item col-lg-1">
+            <img src="Assets/SVGs/youtube.svg" />
+          </li>
+        </ul>
+    <ul class="nav">
+        <li><a href="#">Site Map</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
+    <p>2016 TEN Realty. All Rights Reserved.</p>
+    <div class="container">
+        <img src="Assets/SVGs/realtor.svg" />
+        <img src="Assets/SVGs/office.svg" />
+    </div>
 </footer>
 <!-- End Footer -->
 <script src="script.js"></script>
