--- a/HTML_CSS/index.html
+++ b/HTML_CSS/index.html
@@ -1,213 +1,158 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Booj Code Test</title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-<!--Begin Title Nav-->
-<nav class="navbar navbar-toggleable-sm navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <img class="navbar-brand col-lg-4 col-md-4 hidden-sm-down" src="Assets/SVGs/TEN-logo.svg" />
-  <img class="hidden-md-up" src="Assets/SVGs/TEN-logo-mark.svg" />
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav header-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#">SEARCH</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">COMMUNITIES</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">SERVICES</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">ABOUT US</a>
-      </li>
-    </ul>
+    <!-- Start Header -->
+    <div class="container-fluid">
+      <nav class="navbar navbar-toggleable-md navbar-light">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <img class="navbar-brand col-sm-3 hidden-xs-down" src="Assets/SVGs/TEN-logo.svg" />
+      <img class="hidden-sm-up" src="Assets/SVGs/TEN-logo-mark.svg" />
+<!--         <div class="col-sm-4 offset-sm-4">     
+            <span class="d-inline"><img src="Assets/SVGs/account.svg" />Account</span>
+            <span class="d-inline"><img src="Assets/SVGs/contact.svg" />Contact</span>
+        </div> -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav header-nav top-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">SEARCH</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">COMMUNITIES</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">SERVICES</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="#">ABOUT US</a>
+          </li>
+      </ul>
   </div>
 </nav>
-<!--End Title Nav-->
+</div>
+<!-- End Header -->
 
+<!-- Start Search Bar/Nav -->
+<div class="container-fluid bg-primary text-white">
+    <div class="container">
+        <form class="form-inline pt-2 pb-2">
+          <input class="form-control col-sm-4" type="text" placeholder="Address, City, Zip, or MLS#">
+          <button class="btn col-sm-2 ml-4" type="submit">Search</button>
+      </form>
+  </div>
+</div>
 
-<!--Begin Search Nav-->
-<nav class="navbar navbar-toggleable-md bg-faded searchbar">
-  <form class="form-inline col-lg-5">
-    <input class="form-control col-lg-6 col-md-4 col-sm-4 offset-lg-3" type="text" placeholder="Address, City, Zip, or MLS#">
-    <button class="btn my-2 col-lg-2 col-md-2 col-sm-2" type="submit">Search</button>
-  </form>
-<ul class="navbar-nav col-lg-6 hidden-sm-down">
-      <li class="nav-item col-lg-4">
-        <a class="nav-link" href="#">NEW LISTINGS</a>
-      </li>
-      <li class="nav-item col-lg-4">
-        <a class="nav-link" href="#">OPEN HOUSES</a>
-      </li>
-      <li class="nav-item col-lg-4">
-        <a class="nav-link" href="#">MAP SEARCH</a>
-      </li>
-    </ul>
-</nav>
-<!--End Search Nav-->
+<!-- End Search Bar/Nav -->
+
 <!-- Start Hero Section -->
-<div class="card-deck">
-  <div class="card col-lg-3 col-md-5 col-sm-4 col-centered">
-      <img class="img-fluid" src="Assets/Realtor Image/saramortensun.jpg" />
-  </div>
-  <div class="card col-lg-3 col-md-4 col-sm-4 col-centered">
-    <div class="card-block align-middle">
-      <h4 class="card-title">Jane Smith</h4>
-      <h5>REALTOR</h5>
-    <button class="btn col-md-12">Contact Me</button></br></br>
+<div class="container-fluid bg-info">
+    <div class="container">
         <div class="row">
-          <p class="d-inline-block ml-4 mr-3">
-            <img class="icon" src="Assets/SVGs/twitter.svg" />   
-          </p>
-          <p class="d-inline-block ml-3 mr-3">
-            <img class="icon" src="Assets/SVGs/facebook.svg" />
-          </p>
-          <p class="d-inline-block ml-3 mr-3">
-            <img class="icon" src="Assets/SVGs/instagram.svg" />
-          </p>
-          <p class="d-inline-block ml-3 mr-3">
-            <img class="icon" src="Assets/SVGs/linkedin.svg" />
-          </p>
-          <p class="d-inline-block ml-3 mr-1">
-            <img class="icon" src="Assets/SVGs/youtube.svg" />
-          </p>
+            <div class="col-sm-3">
+                <img class="img-fluid" src="./Assets/Realtor Image/saramortensun.jpg" />
+            </div>
+            <div class="container-fluid col-sm-4">
+                <h3>Jane Smith</h3>
+                <h4>Realtor</h4>
+                <button class="btn form-control btn-primary">Contact Me</button>
+                <div class="container-fluid">
+                    <img src="Assets/SVGs/twitter.svg" />   
+                    <img src="Assets/SVGs/facebook.svg" />
+                    <img src="Assets/SVGs/instagram.svg" />
+                    <img src="Assets/SVGs/linkedin.svg" />
+                    <img src="Assets/SVGs/youtube.svg" />
+                </div>
+            </div>
+            <div class="col-sm-4"> 
+                <ul class="container-fluid">
+                    <li><img class="mr-1" src="Assets/SVGs/contact.svg" />530.802.2150</li>
+                    <li><img class="mr-1" src="Assets/SVGs/website.svg" />Visit My Website</li>
+                    <li><img class="mr-1" src="Assets/SVGs/office.svg" />Denver Office</li>
+                    <li><img class="mr-1" src="Assets/SVGs/enewsletter.svg" />eNewsletter Sign Up</li>
+                </ul>
+            </div>
         </div>
     </div>
-  </div>
-  <div class="card col-lg-3 col-md-4 col-sm-4 col-centered">
-    <div class="card-block align-middle">
-        <ul class="col-lg-12 col-md-12 col-sm-12">
-            <li><img class="icon-sm" src="Assets/SVGs/contact.svg" /> 530.830.2150</li>
-            <li><a href="#"><img class="icon-sm" src="Assets/SVGs/website.svg" /> Visit My Website</a></li>
-            <li><a href="#"><img class="icon-sm" src="Assets/SVGs/office.svg" /> Denver Office</a></li>
-            <li><a href="#"><img class="icon-sm" src="Assets/SVGs/enewsletter.svg" /> eNewsletter Sign Up</a></li>
-        </ul>
-    </div>
-  </div>
 </div>
 <!-- End Hero Section -->
-<!-- Content w/ nav -->
-<div class="container col-xs-10">
-    <ul class="nav nav-tabs justify-content-center">
-      <li class="body-nav col-md-2"><a data-toggle="tab" href="#about-me">About Me</a></li>
-      <li class="body-nav col-md-2"><a data-toggle="tab" href="#my-listings">My Listings</a></li>
-      <li class="body-nav col-md-2"><a data-toggle="tab" href="#my-solds">My Solds</a></li>
-      <li class="body-nav col-md-2"><a data-toggle="tab" href="#testimonials">Testimonials</a></li>
-    </ul>
 
-    <div class="tab-content mb-4">
-      <div id="about-me" class="tab-pane fade active show">
-        <div class="col-lg-8 d-inline-block">
-        <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.</p>
-        </div>
-        <div class="col-lg-3 d-inline-block  mb-4" id="languages">
-            <h3>LANGUAGE</h3>
-                <p>Dutch, French, Spanish</p>
-            <h3>DESIGNATIONS</h3>
-                <p>CRS, GRI, CNE</p>
-        </div>
-      </div>
-      <div id="my-listings" class="tab-pane fade">
-        <div class="col-lg-8 d-inline-block">
-        <h2>My Listings</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.</p>
-        </div>
-        <div class="col-lg-3 d-inline-block" id="languages">
-            <h3>LANGUAGE</h3>
-                <p>Dutch, French, Spanish</p>
-            <h3>DESIGNATIONS</h3>
-                <p>CRS, GRI, CNE</p>
-        </div>
-      </div>
-      <div id="my-solds" class="tab-pane fade">
-        <div class="col-lg-8 d-inline-block">
-        <h2>My Solds</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.</p>
-        </div>
-        <div class="col-lg-3 d-inline-block" id="languages">
-            <h3>LANGUAGE</h3>
-                <p>Dutch, French, Spanish</p>
-            <h3>DESIGNATIONS</h3>
-                <p>CRS, GRI, CNE</p>
-        </div>
-      </div>
-      <div id="testimonials" class="tab-pane fade">
-        <div class="col-lg-8 d-inline-block">
-        <h2>Testimonials</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.</p>
-        </div>
-        <div class="col-lg-3 d-inline-block" id="languages">
-            <h3>LANGUAGE</h3>
-                <p>Dutch, French, Spanish</p>
-            <h3>DESIGNATIONS</h3>
-                <p>CRS, GRI, CNE</p>
-        </div>
-      </div>
-      <div class="clearfix"></div>
+<!-- Start Body Content -->
+<div class="container-fluid">
+    <div class="container mt-4">
+        <ul class="nav nav-tabs text-center">
+          <li class="col-md-3 mb-2"><a data-toggle="tab" href="#about-me">About Me</a></li>
+          <li class="col-md-3"><a data-toggle="tab" href="#my-listings">My Listings</a></li>
+          <li class="col-md-3"><a data-toggle="tab" href="#my-solds">My Solds</a></li>
+          <li class="col-md-3"><a data-toggle="tab" href="#testimonials">Testimonials</a></li>
+        </ul>
     </div>
-    <div class="clearfix"></div>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-9 mt-4 mb-4">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum rerum velit magni, repellendus. Quos necessitatibus doloremque hic. Eius modi ipsum obcaecati ea asperiores quam odit dolorem est, veniam doloribus sed! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur provident, voluptatem mollitia perspiciatis dicta unde quaerat soluta impedit laboriosam odio exercitationem, perferendis possimus eligendi laborum sequi architecto molestias culpa iusto!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nobis vitae nemo eveniet tenetur esse blanditiis eum nostrum rem, quod quibusdam aliquam commodi reprehenderit vel at amet velit laudantium quia.</p>
+            </div>
+          <div class="col-sm-3 mt-4 mb-4">
+            <h5>LANGUAGE</h5>
+                    <p>Dutch, French, Spanish</p>
+                <h5>DESIGNATIONS</h5>
+                    <p>CRS, GRI, CNE</p>
+          </div>
+        </div>
+    </div>
 </div>
 
-<!-- End Content w/ nav -->
-
-
-<!-- Start Footer -->
-<footer>
-    <div class="row col-xs-8 col-lg-10 col-centered">
-        <div class="col-lg-5 col-md-4 col-sm-4 mb-4 ml-4 mt-4">
-            <p class="text-center-xs">1-800-234-4567</p>
-            <p>5678 Main Street, Denver, CO 80123</p>
-            <ul class="nav row">
-                  <li class="nav-item col-xs-1 mx-3">
-                    <img class="icon" src="Assets/SVGs/twitter.svg" />   
-                  </li>
-                  <li class="nav-item col-xs-1 mx-3">
-                    <img class="icon" src="Assets/SVGs/facebook.svg" />
-                  </li>
-                  <li class="nav-item col-xs-1 mx-3">
-                    <img class="icon" src="Assets/SVGs/instagram.svg" />
-                  </li>
-                  <li class="nav-item col-xs-1 mx-3">
-                    <img class="icon" src="Assets/SVGs/linkedin.svg" />
-                  </li>
-                  <li class="nav-item col-xs-1 mx-3">
-                    <img class="icon" src="Assets/SVGs/youtube.svg" />
-                  </li>
-                </ul>
-        </div>
-        <div class="col-lg-6 col-md-4 col-xs-12 pull-right mt-4">        
-            <ul class="nav footer-nav float-right">
-                <li><a href="#">Site Map</a></li>
-                <li><a href="#">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-            </ul></br>
-            <p class="text-right">2016 TEN Realty. All Rights Reserved.</p>
+<!-- End Body Content -->
+<div class="container-fluid bg-info">
+    <div class="container">
+        <div class="row">
+          <div class="col">
+            <p class="text-center-xs"><img src="Assets/SVGs/contact.svg" />1-800-234-4567</br>5678 Main Street, Denver, CO 80123</p>
+                    <ul class="nav">
+                          <li class="">
+                            <img class="icon" src="Assets/SVGs/twitter.svg" />   
+                          </li>
+                          <li class="">
+                            <img class="icon" src="Assets/SVGs/facebook.svg" />
+                          </li>
+                          <li class="nav-item">
+                            <img class="icon" src="Assets/SVGs/instagram.svg" />
+                          </li>
+                          <li class="nav-item">
+                            <img class="icon" src="Assets/SVGs/linkedin.svg" />
+                          </li>
+                          <li class="nav-item">
+                            <img class="icon" src="Assets/SVGs/youtube.svg" />
+                          </li>
+                        </ul>
+          </div>
+          <div class="col float-right">
+            <p class="text-right">
+                <a href="#" class="mr-2">Site Map</a>
+                <a href="#" class="mr-2">Terms of Use</a>
+                <a href="#">Privacy Policy</a>
+                </br>2016 TEN Realty. All Rights Reserved.
+            </p>
             <span class="float-right">
-                <object class="svg" data="Assets/SVGs/equal-housing.svg" type="image/svg+xml"></object>
-                <object class="svg" data="Assets/SVGs/realtor.svg" type="image/svg+xml"></object>
+                <img class="svg" src="Assets/SVGs/equal-housing.svg" />
+                <img class="svg" src="Assets/SVGs/realtor.svg" />
             </span>
+          </div>
         </div>
     </div>
-</footer>
+</div>
+<!-- Start Footer -->
+        
 <!-- End Footer -->
-
-<script src="script.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
